Assignment 7 html responsive Clearfix complete

--- a/styles/main.css
+++ b/styles/main.css
@@ -44,3 +44,11 @@ body {
 @media (min-width: 1024px) {
      html { font-size: 120%; }
 }
+
+.clearfix::after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
