--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,48 @@ body {
     max-width: 64rem;
 }
 
+.navbar {
+  position: relative;
+  padding: 0.5rem;
+  background-color: rgba(101,18,95,0.5);
+  z-index: 1;
+}
+
+.navbar .logo {
+  position: relative;
+  left: 2rem;
+  cursor: pointer;
+}
+
+.navbar .links-container {
+     display: table;
+     position: absolute;
+     top: 0;
+     right: 0;
+     height: 100px;
+     color: white;
+ }
+
+ .links-container .navbar-link {
+     display: table-cell;
+     position: relative;
+     height: 100%;
+     padding-left: 1rem;
+     padding-right: 1rem;
+     vertical-align: middle;
+     color: white;
+     font-size: 0.625rem;
+     letter-spacing: 0.05rem;
+     font-weight: 700;
+     text-transform: uppercase;
+     text-decoration: none;
+     cursor: pointer;
+ }
+
+ .links-container .navbar-link:hover {
+     color: rgb(233,50,117);
+ }
+
 /* Medium and small screens (640px) */
 @media (min-width: 640px) {
      html { font-size: 112%; }
