Assignment 8 html collection added :active p seudo-class

--- a/styles/main.css
+++ b/styles/main.css
@@ -62,6 +62,11 @@ body {
      color: rgb(233,50,117);
  }
 
+  .links-container .navbar-link:active {
+      color: rgb(233,50,117);
+      background-color: white;
+  }
+
 /* Medium and small screens (640px) */
 @media (min-width: 640px) {
      html { font-size: 112%; }
