--- a/styles/main.css
+++ b/styles/main.css
@@ -62,6 +62,10 @@ body {
      color: rgb(233,50,117);
  }
 
+ .container.narrow {
+     max-width: 56rem;
+ }
+ 
 /* Medium and small screens (640px) */
 @media (min-width: 640px) {
      html { font-size: 112%; }
